--- a/.github/workflows/pr-openai-review.yml
+++ b/.github/workflows/pr-openai-review.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened]
 
+permissions:
+  pull-requests: write  # ✅ Grant permission to comment on PRs
+
 jobs:
   openai_review:
     runs-on: ubuntu-latest
