--- a/.github/workflows/pr-openai-review.yml
+++ b/.github/workflows/pr-openai-review.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+permissions:
+  pull-requests: write  # ✅ Grant permission to add comments
+
 jobs:
   review_code:
     runs-on: ubuntu-latest
